<resources>
    <string name="app_name" translatable="false">人脸SDK demo</string>
    <string name="btnLoadModel" translatable="false">1载入模型</string>
    <string name="findface" translatable="false">2人脸查找</string>
    <string name="get_feature2" translatable="false">3录入人脸</string>
    <string name="live" translatable="false">4实时人脸查找</string>

    <string name="test_hint" translatable="false">请一个一个点击按钮</string>
    <string name="title_activity_lpr" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="open_cam" translatable="false">打开摄像头</string>
    <string name="open_file" translatable="false">识别图片</string>
    <string name="getMaxiumFace" translatable="false">获取图中最大人脸</string>
</resources>
